# mlepysak

./: PKG-INFO  README.md  pyproject.toml
src/mlepysak/: sql2csv.py
