[project]
name = "mlepysak"
authors = [
    { name = "Rudra", email = "veerabhadrareddy@pm.me" },
    { name = "VeeraBhadraReddy", email = "veerabhadrareddy@pm.me" },
    { name = "solitorb", email = "veerabhadrareddy@pm.me" },
]
version = "0.1.0"
description = "mlepysak: MLE Python Swiss-Army-Knife, a collection of python scripts for any Devops / Sysadmin purposes."
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = ["boto3", "python-dotenv", "psycopg2-binary"]
readme = "README.md"

[project.scripts]
sql2csv = "mlepysak.sql2csv:main"

[project.urls]
Homepage = "https://github.com/solitorb/mlepysak"
Repository = "https://github.com/solitorb/mlepysak"
"Bug Tracker" = "https://github.com/solitorb/mlepysak/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"
